@@ -3,8 +3,8 @@ package nitin.collections;
 public class EqualsTest {
     public static void main(String[] arg) {
 
-        Integer i = new Integer(3);
-        Integer j = new Integer(3);
+        Integer i = Integer.valueOf(3);
+        Integer j = Integer.valueOf(3);
 
         if (i == j) //2 different objects
             System.out.println("true");
