@@ -13,11 +13,11 @@ public class H2HashTableEnumerationDemo {
         String str;
         double bal;
 
-        balance.put("Zara", new Double(3434.34));
-        balance.put("Mahnaz", new Double(123.22));
-        balance.put("Ayan", new Double(1378.00));
-        balance.put("Daisy", new Double(99.22));
-        balance.put("Qadir", new Double(-19.08));
+        balance.put("Zara", Double.valueOf("3434.34"));
+        balance.put("Mahnaz", Double.valueOf(123.22));
+        balance.put("Ayan", Double.valueOf(1378.00));
+        balance.put("Daisy", Double.valueOf(99.22));
+        balance.put("Qadir", Double.valueOf(-19.08));
 
         // Show all balances in hash table.
         Enumeration<String> names = balance.keys();
@@ -29,7 +29,7 @@ public class H2HashTableEnumerationDemo {
         System.out.println();
         // Deposit 1,000 into Zara's account
         bal = balance.get("Zara").doubleValue();
-        balance.put("Zara", new Double(bal + 1000));
+        balance.put("Zara", Double.valueOf(bal + 1000));
         System.out.println("Zara's new balance: " +
                 balance.get("Zara"));
     }
