@@ -8,10 +8,10 @@ package nitin.generic.boundedType;
 public class Runner {
     public static void main(String[] args) {
         Box<Integer> integerBox = new Box<Integer>();
-        integerBox.setT(new Integer(10));
+        integerBox.setT(Integer.valueOf(10));
         //integerBox.inspect("some text"); // error: this is still String!
         System.out.println("Test");
-        integerBox.inspect(new Integer(10));
+        integerBox.inspect(Integer.valueOf(10));
 
     }
 }
